[metadata]
name = baldertest
use_scm_version=True
description = balder: reusable scenario based test framework
author = Max Stahlschmidt and others
long_description = file: README.md
long_description_content_type = text/markdown
url = https://docs.balder.dev
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/balder
    Tracker=https://github.com/balder-dev/balder/issues
[options.entry_points]
console_scripts =
    balder=_balder.console.balder:console_balder

[options]
packages =
    _balder
    _balder.cnnrelations
    _balder.console
    _balder.controllers
    _balder.executor
    _balder.objects
    _balder.objects.devices
    _balder.objects.connections
    balder
install_requires =

python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no